Fix dialog z-index

--- a/less/deck/dialog.less
+++ b/less/deck/dialog.less
@@ -14,6 +14,7 @@
   position: fixed;
   left: 0;
   top: 0;
+  z-index: 9001;
 }
 
 .deck-dialog > div {
